add h2 to starter-test; rewrite amazon refreshAuth so that old entity is updated not dropped